@@ -1,3 +1,15 @@
+2010-07-07  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Beth Dakin.
+
+        AX: Data table heuristics: assume data table if at least one row or column of TH cells exist
+        https://bugs.webkit.org/show_bug.cgi?id=41806
+
+        Test: platform/mac/accessibility/table-with-row-col-of-headers.html
+
+        * accessibility/AccessibilityTable.cpp:
+        (WebCore::AccessibilityTable::isTableExposableThroughAccessibility):
+
 2010-07-07  Mark Rowe  <mrowe@apple.com>
 
         Fix the build.
